# subwinder

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: --bug-report.md  --documentation.md  --feature.md  --other.md
.github/workflows/: main.yml  pythonpackage.yml
dev/: README.md  fake_media.py  fake_media_entries.json
dev/fake_media/: default_entries.json  fake_media.py
dev/pack_subtitles/: pack_subtitles.py
docs/: Authenticated-Endpoints.md  Custom-Classes.md  Exceptions.md  README.md  Unauthenticated-Endpoints.md  Utility-Functions.md
examples/: README.md  advanced_quickstart.py  interactive.py  robust_search.py
sub_winder/: exceptions.py  lib.py  utils.py
sub_winder/containers/: hashers.py  info.py  results.py
subwinder/: __init__.py  _constants.py  _internal_utils.py  _ranking.py  _request.py  auth.py  base.py  constants.py  core.py  exceptions.py  hashers.py  info.py  lang.py  lib.py  media.py  names.py  ranking.py  request.py  results.py  types.py  utils.py
subwinder/containers/: info.py  results.py
tests/: conftest.py  constants.py  test_auth.py  test_base.py  test_core.py  test_examples.py  test_hashers.py  test_info.py  test_init.py  test_lang.py  test_media.py  test_ranking.py  test_request.py  test_results.py  test_sub_winder.py  test_subwinder.py  test_utils.py  utils.py
tests/dev_tests/: test_fake_media.py  test_pack_subtitles.py
tests/dev_tests/assets/fake_media/: dummy_entries.json
tests/examples_tests/: test_examples.py
tests/examples_tests/assets/adv_quickstart/: small_entries.json
tests/examples_tests/responses/: adv_quickstart.json
tests/hash_files/: random_1  random_2
tests/integration_test_assets/adv_quickstart/: ledger.json
tests/integration_test_assets/adv_quickstart/Output/: Detour (1945).eng.srt  Night Watch (2004).eng.srt  (+1 more)
tests/sample_info/: episode_info.json  full_user_info.json  media_info.json  subtitles_info.json
tests/sample_responses/: example_adv_quickstart.json  example_interactive.json  get_comments.json  guess_media.json  guess_media_edge_cases.json  search_subtitles.json  user_info.json  vote.json
tests/subwinder_tests/: test_core.py  test_info.py  test_lang.py  test_media.py  test_ranking.py  test_request.py  test_utils.py
tests/subwinder_tests/responses/: auto_update.json  comment.json  download_subtitles.json  get_comments.json  preview_subtitles.json  search_subtitles.json  server_info.json  suggest_media.json
(+5 files in other folders)
