[tool.poetry]
name = "subwinder"
version = "1.1.0"
description = "An ergonomic python library for the opensubtitles.org API"
license = "AGPL-3.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
readme = "README.md"
repository = "https://github.com/LovecraftianHorror/subwinder"
keywords = ["subtitles", "opensubtitles", "subtitles api", "movies", "tv shows"]

[tool.poetry.dependencies]
python = "^3.7"
# Optional dependencies
atomicwrites = { version = "^1.4", optional = true }

[tool.poetry.extras]
atomic_downloads = ["atomicwrites"]

[tool.poetry.dev-dependencies]
# Linters and formatting
black = "20.8b1"
flake8 = "3.8.4"
isort = "^5.7"

# Testing
hypothesis = "^6.1"
pytest = "^6.2"
pytest-black = "^0.3"
pytest-flake8 = "^1.0"
pytest-isort = "^1.3"
pytest-random-order = "^1.0"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
